test/err/module_complex_init.expected
ERROR: 5:9: module-level variable 'p' cannot have complex initializer expression
